--- a/neural-network.ipynb
+++ b/neural-network.ipynb
@@ -108,14 +108,14 @@
     "        ##### YOUR CODE HERE #####\n",
     "        # Layer 1: Hidden layer\n",
     "        # Linear transformation: Z1 = X @ W1 + b1\n",
-    "        Z1 = np.dot(X,self.weights_history['W1']) + self.weights_history['b1']  #Shape: (n_samples, hidden_size)\n",
+    "        Z1 = X@(self.W1) + self.b1  #Shape: (n_samples, hidden_size)\n",
     "        \n",
     "        # Apply activation function\n",
     "        A1 = sigmoid(Z1)     # Shape: (n_samples, hidden_size)\n",
     "        \n",
     "        # Layer 2: Output layer\n",
     "        # Linear transformation: Z2 = A1 @ W2 + b2\n",
-    "        Z2 = np.dot(A1,self.weights_history['W2'])+self.weights_history['b2'] # Shape: (n_samples, output_size)\n",
+    "        Z2 = A1@(self.W2)+self.b2 # Shape: (n_samples, output_size)\n",
     "        \n",
     "        # Apply sigmoid for binary classification\n",
     "        A2 = sigmoid(Z2)   # Shape: (n_samples, output_size)\n",
@@ -161,20 +161,20 @@
     "        dZ2 = A2 - y_true.reshape(-1,1) * (sigmoid_derivative(y_pred)+calculate_loss(self,y_true,y_pred)) # Shape: (n_samples, 1)\n",
     "        \n",
     "        # dL/dW2 = A1.T @ dZ2 / m\n",
-    "        dW2 = np.dot(A1.T,dZ2)/ m      # Shape: (hidden_size, 1)\n",
+    "        dW2 = (A1.T @ dZ2) / m      # Shape: (hidden_size, 1)\n",
     "        \n",
     "        # dL/db2 = mean(dZ2) (over the first axis and keep dimensions)\n",
-    "        db2 = np.mean(dZ2)  # Shape: (1, 1)\n",
+    "        db2 = np.mean(dZ2, axis=0, keepDims = True)  # Shape: (1, 1)\n",
     "        \n",
     "        # Hidden layer gradients\n",
     "        # dL/dA1 = dZ2 @ W2.T\n",
-    "        dA1 = np.dot(dZ2,W2.T)      # Shape: (n_samples, hidden_size)\n",
+    "        dA1 = dZ2 @ ((self.W2).T)   # Shape: (n_samples, hidden_size)\n",
     "        \n",
     "        # dL/dZ1 = dA1 * activation_derivative(Z1)\n",
     "        dZ1 = dA1 * sigmoid_derivative(Z1)  # Shape: (n_samples, hidden_size)\n",
     "        \n",
     "        # dL/dW1 = X.T @ dZ1 / m\n",
-    "        dW1 = np.dot(X.T,dZ1)/m        # Shape: (input_size, hidden_size)\n",
+    "        dW1 = (X.T  @ dZ1)/m        # Shape: (input_size, hidden_size)\n",
     "        \n",
     "        # dL/db1 = mean(dZ1) (over the first axis and keep dimensions)\n",
     "        db1 = mp.mean(dZ1)  # Shape: (1, hidden_size)\n",
@@ -255,14 +255,14 @@
    "outputs": [
     {
      "ename": "ValueError",
-     "evalue": "shapes (50,2) and (0,) not aligned: 2 (dim 1) != 0 (dim 0)",
+     "evalue": "operands could not be broadcast together with shapes (50,) (6,) ",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
       "Cell \u001b[0;32mIn[3], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# You can use this cell to test if the foward pass works correctly\u001b[39;00m\n\u001b[1;32m      2\u001b[0m nn \u001b[38;5;241m=\u001b[39m SimpleNeuralNetwork(input_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2\u001b[39m, hidden_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m6\u001b[39m, output_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m, activation\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msigmoid\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m----> 3\u001b[0m y_pred, cache \u001b[38;5;241m=\u001b[39m \u001b[43mnn\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mforward_pass\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfeature_matrix\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPredictions shape:\u001b[39m\u001b[38;5;124m\"\u001b[39m, y_pred\u001b[38;5;241m.\u001b[39mshape)\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFirst 5 predictions:\u001b[39m\u001b[38;5;124m\"\u001b[39m, y_pred[:\u001b[38;5;241m5\u001b[39m]\u001b[38;5;241m.\u001b[39mflatten())\n",
-      "Cell \u001b[0;32mIn[2], line 69\u001b[0m, in \u001b[0;36mSimpleNeuralNetwork.forward_pass\u001b[0;34m(self, X)\u001b[0m\n\u001b[1;32m     56\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m     57\u001b[0m \u001b[38;5;124;03mPerform forward propagation through the network\u001b[39;00m\n\u001b[1;32m     58\u001b[0m \u001b[38;5;124;03m\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     64\u001b[0m \u001b[38;5;124;03m- cache: intermediate values for backpropagation\u001b[39;00m\n\u001b[1;32m     65\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m     66\u001b[0m \u001b[38;5;66;03m##### YOUR CODE HERE #####\u001b[39;00m\n\u001b[1;32m     67\u001b[0m \u001b[38;5;66;03m# Layer 1: Hidden layer\u001b[39;00m\n\u001b[1;32m     68\u001b[0m \u001b[38;5;66;03m# Linear transformation: Z1 = X @ W1 + b1\u001b[39;00m\n\u001b[0;32m---> 69\u001b[0m Z1 \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdot\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX\u001b[49m\u001b[43m,\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mweights_history\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mW1\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mweights_history[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mb1\u001b[39m\u001b[38;5;124m'\u001b[39m]  \u001b[38;5;66;03m#Shape: (n_samples, hidden_size)\u001b[39;00m\n\u001b[1;32m     71\u001b[0m \u001b[38;5;66;03m# Apply activation function\u001b[39;00m\n\u001b[1;32m     72\u001b[0m A1 \u001b[38;5;241m=\u001b[39m sigmoid(Z1)     \u001b[38;5;66;03m# Shape: (n_samples, hidden_size)\u001b[39;00m\n",
-      "\u001b[0;31mValueError\u001b[0m: shapes (50,2) and (0,) not aligned: 2 (dim 1) != 0 (dim 0)"
+      "Cell \u001b[0;32mIn[2], line 69\u001b[0m, in \u001b[0;36mSimpleNeuralNetwork.forward_pass\u001b[0;34m(self, X)\u001b[0m\n\u001b[1;32m     56\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m     57\u001b[0m \u001b[38;5;124;03mPerform forward propagation through the network\u001b[39;00m\n\u001b[1;32m     58\u001b[0m \u001b[38;5;124;03m\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     64\u001b[0m \u001b[38;5;124;03m- cache: intermediate values for backpropagation\u001b[39;00m\n\u001b[1;32m     65\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m     66\u001b[0m \u001b[38;5;66;03m##### YOUR CODE HERE #####\u001b[39;00m\n\u001b[1;32m     67\u001b[0m \u001b[38;5;66;03m# Layer 1: Hidden layer\u001b[39;00m\n\u001b[1;32m     68\u001b[0m \u001b[38;5;66;03m# Linear transformation: Z1 = X @ W1 + b1\u001b[39;00m\n\u001b[0;32m---> 69\u001b[0m Z1 \u001b[38;5;241m=\u001b[39m \u001b[43mX\u001b[49m\u001b[38;5;241;43m@\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mW1\u001b[49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mb1\u001b[49m  \u001b[38;5;66;03m#Shape: (n_samples, hidden_size)\u001b[39;00m\n\u001b[1;32m     71\u001b[0m \u001b[38;5;66;03m# Apply activation function\u001b[39;00m\n\u001b[1;32m     72\u001b[0m A1 \u001b[38;5;241m=\u001b[39m sigmoid(Z1)     \u001b[38;5;66;03m# Shape: (n_samples, hidden_size)\u001b[39;00m\n",
+      "\u001b[0;31mValueError\u001b[0m: operands could not be broadcast together with shapes (50,) (6,) "
      ]
     }
    ],
